{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 266,
  "lineage": "9c5f9801-3b39-cde2-f95c-23efb654bf46",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "petclinic-isi-prod-alb-logs-39d27543",
                "enabled": true,
                "prefix": "alb"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:049618906674:loadbalancer/app/petclinic-isi-prod-alb/589c5a0de6bb21b9",
            "arn_suffix": "app/petclinic-isi-prod-alb/589c5a0de6bb21b9",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "petclinic-isi-prod-alb-1792670642.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:049618906674:loadbalancer/app/petclinic-isi-prod-alb/589c5a0de6bb21b9",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "petclinic-isi-prod-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03c9d47959dcf7d97"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07f562276cd87f3f5"
              },
              {
                "subnet_id": "subnet-08fca09be869512f4"
              },
              {
                "subnet_id": "subnet-09a9fb273581998f5"
              }
            ],
            "subnets": [
              "subnet-07f562276cd87f3f5",
              "subnet-08fca09be869512f4",
              "subnet-09a9fb273581998f5"
            ],
            "tags": {
              "Name": "petclinic-isi-prod-alb"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "petclinic-isi-prod-alb",
              "Project": "petclinic"
            },
            "vpc_id": "vpc-0975d7ec991cf3482",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_s3_bucket.alb_logs",
            "module.alb.random_id.suffix",
            "module.security_groups.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:049618906674:listener/app/petclinic-isi-prod-alb/589c5a0de6bb21b9/7786b5b01fb193a5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:049618906674:listener/app/petclinic-isi-prod-alb/589c5a0de6bb21b9/7786b5b01fb193a5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:049618906674:loadbalancer/app/petclinic-isi-prod-alb/589c5a0de6bb21b9",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "ManagedBy": "Terraform",
              "Project": "petclinic"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_lb.main",
            "module.alb.aws_s3_bucket.alb_logs",
            "module.alb.random_id.suffix",
            "module.security_groups.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:049618906674:listener/app/petclinic-isi-prod-alb/589c5a0de6bb21b9/214594c5efda2394",
            "certificate_arn": "arn:aws:iam::049618906674:server-certificate/petclinic-isi-prod-automated-cert",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:049618906674:targetgroup/petclinic-isi-prod-tg/d706a6008109a867",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:049618906674:listener/app/petclinic-isi-prod-alb/589c5a0de6bb21b9/214594c5efda2394",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:049618906674:loadbalancer/app/petclinic-isi-prod-alb/589c5a0de6bb21b9",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": null,
            "tags_all": {
              "ManagedBy": "Terraform",
              "Project": "petclinic"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_lb.main",
            "module.alb.aws_lb_target_group.app",
            "module.alb.aws_s3_bucket.alb_logs",
            "module.alb.random_id.suffix",
            "module.iam.aws_iam_server_certificate.petclinic_automated_cert",
            "module.iam.tls_private_key.petclinic_key",
            "module.iam.tls_self_signed_cert.petclinic_self_signed",
            "module.security_groups.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:049618906674:targetgroup/petclinic-isi-prod-tg/d706a6008109a867",
            "arn_suffix": "targetgroup/petclinic-isi-prod-tg/d706a6008109a867",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200,302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:049618906674:targetgroup/petclinic-isi-prod-tg/d706a6008109a867",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "petclinic-isi-prod-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "petclinic-isi-prod-tg"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "petclinic-isi-prod-tg",
              "Project": "petclinic"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0975d7ec991cf3482"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049618906674:security-group/sg-03c9d47959dcf7d97",
            "description": "Security Group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound to ECS tasks",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "id": "sg-03c9d47959dcf7d97",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from Internet - redirect to HTTPS",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from Internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "petclinic-isi-prod-sg-alb",
            "name_prefix": "",
            "owner_id": "049618906674",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "petclinic-isi-prod-sg-alb"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "petclinic-isi-prod-sg-alb",
              "Project": "petclinic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0975d7ec991cf3482"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049618906674:security-group/sg-0b0ea9dc398ae1e08",
            "description": "Security Group for ECS Fargate tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound Internet via NAT Gateway",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b0ea9dc398ae1e08",
            "ingress": [],
            "name": "petclinic-isi-prod-sg-app",
            "name_prefix": "",
            "owner_id": "049618906674",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "petclinic-isi-prod-sg-app"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "petclinic-isi-prod-sg-app",
              "Project": "petclinic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0975d7ec991cf3482"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049618906674:security-group/sg-000f53a8144e88cc3",
            "description": "Security Group for RDS PostgreSQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "No outbound traffic required",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-000f53a8144e88cc3",
            "ingress": [],
            "name": "petclinic-isi-prod-sg-rds",
            "name_prefix": "",
            "owner_id": "049618906674",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "petclinic-isi-prod-sg-rds"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "petclinic-isi-prod-sg-rds",
              "Project": "petclinic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0975d7ec991cf3482"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app_from_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Traffic from ALB SG only",
            "from_port": 8080,
            "id": "sgrule-904913696",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b0ea9dc398ae1e08",
            "security_group_rule_id": "sgr-0b095933b623fe510",
            "self": false,
            "source_security_group_id": "sg-03c9d47959dcf7d97",
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.alb",
            "module.security_groups.aws_security_group.app",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_from_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "PostgreSQL from APP SG only",
            "from_port": 5432,
            "id": "sgrule-2404099771",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-000f53a8144e88cc3",
            "security_group_rule_id": "sgr-0cc7fac6f1a662b78",
            "self": false,
            "source_security_group_id": "sg-0b0ea9dc398ae1e08",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.app",
            "module.security_groups.aws_security_group.rds",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01fa5e6f29b4045be",
            "arn": "arn:aws:ec2:us-east-1:049618906674:elastic-ip/eipalloc-01fa5e6f29b4045be",
            "domain": "vpc",
            "id": "eipalloc-01fa5e6f29b4045be",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-234-119-124.compute-1.amazonaws.com",
            "public_ip": "34.234.119.124",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "petclinic-isi-prod-nat-eip-us-east-1a"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "petclinic-isi-prod-nat-eip-us-east-1a",
              "Project": "petclinic"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06c09365f452b85f8",
            "arn": "arn:aws:ec2:us-east-1:049618906674:elastic-ip/eipalloc-06c09365f452b85f8",
            "domain": "vpc",
            "id": "eipalloc-06c09365f452b85f8",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-32-195-132-217.compute-1.amazonaws.com",
            "public_ip": "32.195.132.217",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "petclinic-isi-prod-nat-eip-us-east-1b"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "petclinic-isi-prod-nat-eip-us-east-1b",
              "Project": "petclinic"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01869edbec62ed3f0",
            "arn": "arn:aws:ec2:us-east-1:049618906674:elastic-ip/eipalloc-01869edbec62ed3f0",
            "domain": "vpc",
            "id": "eipalloc-01869edbec62ed3f0",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-234-117-57.compute-1.amazonaws.com",
            "public_ip": "3.234.117.57",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "petclinic-isi-prod-nat-eip-us-east-1c"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "petclinic-isi-prod-nat-eip-us-east-1c",
              "Project": "petclinic"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049618906674:internet-gateway/igw-0b48b502aba9c16ae",
            "id": "igw-0b48b502aba9c16ae",
            "owner_id": "049618906674",
            "tags": {
              "Name": "petclinic-isi-prod-igw"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "petclinic-isi-prod-igw",
              "Project": "petclinic"
            },
            "vpc_id": "vpc-0975d7ec991cf3482"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01fa5e6f29b4045be",
            "association_id": "eipassoc-0750e4500e9c73764",
            "connectivity_type": "public",
            "id": "nat-04ea854de776cfd3f",
            "network_interface_id": "eni-00bd1c4cdf7080675",
            "private_ip": "10.0.1.148",
            "public_ip": "34.234.119.124",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07f562276cd87f3f5",
            "tags": {
              "Name": "petclinic-isi-prod-nat-us-east-1a"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "petclinic-isi-prod-nat-us-east-1a",
              "Project": "petclinic"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06c09365f452b85f8",
            "association_id": "eipassoc-0a019bc959d089f8f",
            "connectivity_type": "public",
            "id": "nat-06d3dabadcd3e0e85",
            "network_interface_id": "eni-03956cf0deed3eeb8",
            "private_ip": "10.0.2.179",
            "public_ip": "32.195.132.217",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08fca09be869512f4",
            "tags": {
              "Name": "petclinic-isi-prod-nat-us-east-1b"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "petclinic-isi-prod-nat-us-east-1b",
              "Project": "petclinic"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01869edbec62ed3f0",
            "association_id": "eipassoc-089d31e8e25235863",
            "connectivity_type": "public",
            "id": "nat-049b63d4c2af985dc",
            "network_interface_id": "eni-03ff58094ad7101c8",
            "private_ip": "10.0.3.57",
            "public_ip": "3.234.117.57",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09a9fb273581998f5",
            "tags": {
              "Name": "petclinic-isi-prod-nat-us-east-1c"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "petclinic-isi-prod-nat-us-east-1c",
              "Project": "petclinic"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049618906674:route-table/rtb-0695931481f50fbc4",
            "id": "rtb-0695931481f50fbc4",
            "owner_id": "049618906674",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04ea854de776cfd3f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "petclinic-isi-prod-rt-private-us-east-1a"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "petclinic-isi-prod-rt-private-us-east-1a",
              "Project": "petclinic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0975d7ec991cf3482"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049618906674:route-table/rtb-0d08351aa5537d147",
            "id": "rtb-0d08351aa5537d147",
            "owner_id": "049618906674",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06d3dabadcd3e0e85",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "petclinic-isi-prod-rt-private-us-east-1b"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "petclinic-isi-prod-rt-private-us-east-1b",
              "Project": "petclinic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0975d7ec991cf3482"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049618906674:route-table/rtb-061859c8003e2e9ec",
            "id": "rtb-061859c8003e2e9ec",
            "owner_id": "049618906674",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-049b63d4c2af985dc",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "petclinic-isi-prod-rt-private-us-east-1c"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "petclinic-isi-prod-rt-private-us-east-1c",
              "Project": "petclinic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0975d7ec991cf3482"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049618906674:route-table/rtb-0f90f9314e7295148",
            "id": "rtb-0f90f9314e7295148",
            "owner_id": "049618906674",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b48b502aba9c16ae",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "petclinic-isi-prod-rt-public"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "petclinic-isi-prod-rt-public",
              "Project": "petclinic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0975d7ec991cf3482"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0136f7658f1957eeb",
            "route_table_id": "rtb-0695931481f50fbc4",
            "subnet_id": "subnet-0b705e446bd4b2a18"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.db",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f6897922d6d2541",
            "route_table_id": "rtb-0d08351aa5537d147",
            "subnet_id": "subnet-093bfbe69db235ed5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.db",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d96a8c6bf2e4258",
            "route_table_id": "rtb-061859c8003e2e9ec",
            "subnet_id": "subnet-05a9362c5283adea7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.db",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081ddb96d1e9e52c4",
            "route_table_id": "rtb-0695931481f50fbc4",
            "subnet_id": "subnet-053973f6d1b01c7c8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-059bc7a14e9973029",
            "route_table_id": "rtb-0d08351aa5537d147",
            "subnet_id": "subnet-038cfbfdcb62b497c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b384f2e7c13ec810",
            "route_table_id": "rtb-061859c8003e2e9ec",
            "subnet_id": "subnet-0ef38c51692a2ec1e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0873166c49fa8ac5a",
            "route_table_id": "rtb-0f90f9314e7295148",
            "subnet_id": "subnet-07f562276cd87f3f5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ddfd0dda8e8d5c0",
            "route_table_id": "rtb-0f90f9314e7295148",
            "subnet_id": "subnet-08fca09be869512f4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc126ac056757258",
            "route_table_id": "rtb-0f90f9314e7295148",
            "subnet_id": "subnet-09a9fb273581998f5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049618906674:subnet/subnet-0b705e446bd4b2a18",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b705e446bd4b2a18",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "049618906674",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "petclinic-isi-prod-db-us-east-1a",
              "Type": "Private-DB"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "petclinic-isi-prod-db-us-east-1a",
              "Project": "petclinic",
              "Type": "Private-DB"
            },
            "vpc_id": "vpc-0975d7ec991cf3482"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049618906674:subnet/subnet-093bfbe69db235ed5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-093bfbe69db235ed5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "049618906674",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "petclinic-isi-prod-db-us-east-1b",
              "Type": "Private-DB"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "petclinic-isi-prod-db-us-east-1b",
              "Project": "petclinic",
              "Type": "Private-DB"
            },
            "vpc_id": "vpc-0975d7ec991cf3482"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049618906674:subnet/subnet-05a9362c5283adea7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.23.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a9362c5283adea7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "049618906674",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "petclinic-isi-prod-db-us-east-1c",
              "Type": "Private-DB"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "petclinic-isi-prod-db-us-east-1c",
              "Project": "petclinic",
              "Type": "Private-DB"
            },
            "vpc_id": "vpc-0975d7ec991cf3482"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049618906674:subnet/subnet-053973f6d1b01c7c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053973f6d1b01c7c8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "049618906674",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "petclinic-isi-prod-private-us-east-1a",
              "Type": "Private-App"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "petclinic-isi-prod-private-us-east-1a",
              "Project": "petclinic",
              "Type": "Private-App"
            },
            "vpc_id": "vpc-0975d7ec991cf3482"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049618906674:subnet/subnet-038cfbfdcb62b497c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-038cfbfdcb62b497c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "049618906674",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "petclinic-isi-prod-private-us-east-1b",
              "Type": "Private-App"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "petclinic-isi-prod-private-us-east-1b",
              "Project": "petclinic",
              "Type": "Private-App"
            },
            "vpc_id": "vpc-0975d7ec991cf3482"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049618906674:subnet/subnet-0ef38c51692a2ec1e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef38c51692a2ec1e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "049618906674",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "petclinic-isi-prod-private-us-east-1c",
              "Type": "Private-App"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "petclinic-isi-prod-private-us-east-1c",
              "Project": "petclinic",
              "Type": "Private-App"
            },
            "vpc_id": "vpc-0975d7ec991cf3482"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049618906674:subnet/subnet-07f562276cd87f3f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f562276cd87f3f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "049618906674",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "petclinic-isi-prod-public-us-east-1a",
              "Type": "Public"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "petclinic-isi-prod-public-us-east-1a",
              "Project": "petclinic",
              "Type": "Public"
            },
            "vpc_id": "vpc-0975d7ec991cf3482"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049618906674:subnet/subnet-08fca09be869512f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08fca09be869512f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "049618906674",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "petclinic-isi-prod-public-us-east-1b",
              "Type": "Public"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "petclinic-isi-prod-public-us-east-1b",
              "Project": "petclinic",
              "Type": "Public"
            },
            "vpc_id": "vpc-0975d7ec991cf3482"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049618906674:subnet/subnet-09a9fb273581998f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a9fb273581998f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "049618906674",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "petclinic-isi-prod-public-us-east-1c",
              "Type": "Public"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "petclinic-isi-prod-public-us-east-1c",
              "Project": "petclinic",
              "Type": "Public"
            },
            "vpc_id": "vpc-0975d7ec991cf3482"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:049618906674:vpc/vpc-0975d7ec991cf3482",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fceb5810c41691f5",
            "default_route_table_id": "rtb-084676be9d6f27232",
            "default_security_group_id": "sg-077964a0c7c0b576e",
            "dhcp_options_id": "dopt-0e84afa008fa529ff",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0975d7ec991cf3482",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-084676be9d6f27232",
            "owner_id": "049618906674",
            "tags": {
              "Name": "petclinic-isi-prod-vpc"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "petclinic-isi-prod-vpc",
              "Project": "petclinic"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}